medusa-backend.xuperson.org/medusa-backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusa-backend
  labels:
    name: medusa-backend
    app.kubernetes.io/name: medusa-backend
    app.kubernetes.io/part-of: medusa-cluster
